<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp"
      android:gravity="center"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hero_cookie"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_cookie"
        android:textColor="@color/colorCookieActivityTextColor"
        android:textStyle="bold"
        android:textSize="28sp"
        />

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/colorCookieActivityTextColor"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/buy_button"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_button"
        />

  </LinearLayout>
</ScrollView>
